--- a/chart/templates/role.yaml
+++ b/chart/templates/role.yaml
@@ -2,6 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: {{ include "helm.serviceAccountName" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "helm.labels" . | nindent 8 }}
 rules:
