--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -3,6 +3,9 @@
 
 replicaCount: 1
 
+labels:
+  component: service
+
 image:
   repository: ghcr.io/krateoplatformops/component-service
   pullPolicy: IfNotPresent
